@@ -38,4 +38,7 @@ Revision history for Perl extension Mail::Ezmlm.
 0.07 Mon Jan  2 22:12:32 CET 2006
    - new functions for text management (idx >= 5.0)
    - new functions for language setting (idx >= 5.0)
+   - new functions for charset setting (idx >= 5.0)
    - new functions for config directory setting (idx >= 5.0)
+   - look for ezmlm-make at run-time
+   - requires Text::ParseWords
